# ChangeLog for app-emulation/emul-linux-x86-xlibs
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-xlibs/ChangeLog,v 1.78 2008/12/21 13:54:43 maekke Exp $

  21 Dec 2008; Markus Meier <maekke@gentoo.org>
  emul-linux-x86-xlibs-20080810.ebuild:
  amd64 stable, bug #244454

*emul-linux-x86-xlibs-20081109 (10 Nov 2008)

  10 Nov 2008; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-xlibs-20081109.ebuild:
  package bump

*emul-linux-x86-xlibs-20080810 (10 Aug 2008)

  10 Aug 2008; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-xlibs-20080810.ebuild:
  version bump

  31 May 2008; Ulrich Mueller <ulm@gentoo.org>
  emul-linux-x86-xlibs-10.0.ebuild, emul-linux-x86-xlibs-10.1.ebuild,
  emul-linux-x86-xlibs-20071114.ebuild, emul-linux-x86-xlibs-20071128.ebuild,
  emul-linux-x86-xlibs-20071128-r1.ebuild,
  emul-linux-x86-xlibs-20071128-r2.ebuild,
  emul-linux-x86-xlibs-20071230.ebuild, emul-linux-x86-xlibs-20080316.ebuild:
  Add MOTIF to LICENSE, fixes bug 213750.

  11 Apr 2008; Markus Meier <maekke@gentoo.org>
  emul-linux-x86-xlibs-20080316.ebuild:
  amd64 stable, bug #208904

*emul-linux-x86-xlibs-20080316 (17 Mar 2008)

  17 Mar 2008; Peter Weller <welp@gentoo.org>
  +emul-linux-x86-xlibs-20080316.ebuild:
  Bump

*emul-linux-x86-xlibs-20071230 (30 Dec 2007)

  30 Dec 2007; <welp@gentoo.org> +emul-linux-x86-xlibs-20071230.ebuild:
  Bumb

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing kugelfang from metadata.xml as per #46972.

*emul-linux-x86-xlibs-20071128-r2 (30 Nov 2007)

  30 Nov 2007; Christoph Mende <angelos@gentoo.org>
  +emul-linux-x86-xlibs-20071128-r2.ebuild:
  Revbump to fix the collision on libGL.so

  28 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  emul-linux-x86-xlibs-20071128-r1.ebuild:
  Stable on amd64.

*emul-linux-x86-xlibs-20071128-r1 (28 Nov 2007)

  28 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org>