@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/emul-linux-x86-xlibs
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-xlibs/ChangeLog,v 1.78 2008/12/21 13:54:43 maekke Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-xlibs/ChangeLog,v 1.79 2009/07/21 22:41:45 arfrever Exp $
+
+  21 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  emul-linux-x86-xlibs-20081109.ebuild:
+  Set QA_DT_HASH.
 
   21 Dec 2008; Markus Meier <maekke@gentoo.org>
   emul-linux-x86-xlibs-20080810.ebuild:
